--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -49,7 +49,12 @@ h2,
 h3,
 p,
 a {
-  font-family: lato;
+  /* font-family: lato; */
+  /* font-family: Alegreya; */
+  font-family: "Alegreya", "lato", "Muli", "B612", serif;
+  /* font-family: "B612", sans-serif; */
+  /* font-family: "Lato", sans-serif; */
+  /* font-family: "Muli", sans-serif; */
   font-weight: 400;
   line-height: 26px;
   color: #fff;
@@ -80,6 +85,7 @@ ul {
 a {
   text-decoration: none;
 }
+
 li {
   display: inline-block;
   margin: 4px;
@@ -90,6 +96,7 @@ li {
 /* ============================================================================= */
 header h1 {
   line-height: 40px;
+  font-weight: 600;
   /* background-color: rgb(112, 31, 204); */
   /* width: 100%; */
 }
@@ -110,6 +117,11 @@ header p {
   /* top: 20px; */
   width: 100%;
   text-align: center;
+  border-bottom: 2px solid #00000000;
+}
+
+.navbar-collapse li:hover {
+  border-bottom: 2px solid #ff5b3e;
 }
 /* .navbar-collapse li:hover {
   background-color: #d2691e;
@@ -118,7 +130,7 @@ header p {
 } */
 
 .hero {
-  padding: 60px;
+  padding: 50px;
   /* background-color: coral; */
 }
 
@@ -126,7 +138,7 @@ header p {
 /* SEARCH SECTION */
 /* ============================================================================= */
 .firstcontainer {
-  padding: 100px;
+  padding: 106px;
   /* background-color: coral; */
   /* margin-left: 20px; */
   /* width: 100%; */
@@ -144,7 +156,7 @@ input {
   border-radius: 2%;
   color: #fff;
   width: 100%;
-  text-align: center ;
+  text-align: center;
 }
 input:focus {
   background-color: #03444400;
@@ -153,7 +165,7 @@ input:focus {
 
 ::placeholder {
   font-style: italic;
-  font-size: 14px;
+  font-size: 16px;
   text-align: center;
 }
 
@@ -168,15 +180,11 @@ button {
   margin: 8px auto auto auto;
   transition: background color 1s ease;
 }
-button:focus {
-  /* background-color: #8f1d1d; */
-  /* outline: none; */
-}
+
 button:hover {
   /* background-color: #030444; */
   outline: none;
   transition: background color 1s ease;
-
 }
 /* ============================================================================= */
 /* FOOTER SECTION */
@@ -184,7 +192,7 @@ button:hover {
 footer {
   background-color: #000000df;
   margin-bottom: 0;
-  padding: 12px;
+  padding: 10px;
 }
 
 footer p {
