updated readme and real copy. Can now extract any name and resulted apended. Next is to slice out the results)

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -23,12 +23,12 @@ body {
     rgba(3, 68, 68, 1) 27%,
     rgba(98, 125, 77, 1) 100%
   ); */
-  background: -webkit-linear-gradient(
+  /* background: -webkit-linear-gradient(
     -45deg,
     rgba(3, 68, 68, 1) 0%,
     rgba(3, 68, 68, 1) 27%,
     rgb(7, 119, 72) 100%
-  );  
+  );   */
   font-family: 'Caveat', cursive;
 
   /* background: linear-gradient(
@@ -164,6 +164,10 @@ input {
   background-repeat: no-repeat;
   background-position: right;
   background-size: 30px;
+  font-size: 16px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+
 }
 input:focus {
   background-color: #03444400;
