--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -162,7 +162,7 @@ input {
   text-align: center;
   background-image: url("resouces/search.png");
   background-repeat: no-repeat;
-  background-position: right;
+  background-position: left;
   background-size: 30px;
   font-size: 16px;
   text-transform: uppercase;
@@ -180,6 +180,7 @@ input:focus {
   text-align: center;
   font-family: "Caveat", cursive;
   color: #fff;
+  text-transform: capitalize;
 }
 
 button {
@@ -206,13 +207,11 @@ footer {
   background-color: #000000df;
   margin-bottom: 0;
   padding: 10px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
 footer p {
   text-align: center;
-}
-.foot{
-  position: absolute;
-  bottom: 0;
-  width: 100%;
 }
